# bspline-interpolation

./: README.md  init_python_repo.sh  main.py  pyproject.toml
bsplin/: dba.py  main.py  prefiltering.py  scaling.py
src/: ds.py  prefiltering.py  scaling.py
