[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "bspline-interpolation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"pillow>=11.0.0",
]

[tool.poetry]
packages = [
    { include = "bsplin" },
]

[project.scripts]
bsplin = "bsplin.main:main"
